--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.19.1",
     "izitoast": "^1.4.0",
+    "vee-validate": "^4.8.6",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
